# ESP8266-LVGL

./: CMakeLists.txt  Makefile  README.md  custom.csv  sdkconfig  sdkconfig.old
components/st7735/: CMakeLists.txt  component.mk  st7735.rar
components/st7735/inc/: image.h  lcd.h  st7735.h  st7735s.h  tft_front.h
components/st7735/src/: lcd.c  qq.c  st7735.c
main/: CMakeLists.txt  component.mk  src.rar
main/src/: cmd_wifi.c  http.c  littlefs.c  lv_port_disp.c  lv_port_indev.c  lvgl_app.c  main.c  smartconfig.c  user_console.c  wifi.c
